--- a/include/beamersetup.tex
+++ b/include/beamersetup.tex
@@ -22,7 +22,9 @@
 \setbeamertemplate{title page}[default][colsep=-4bp,rounded=false,shadow=false]
 \setbeamertemplate{title page}
 {
-    %\nointerlineskip%
+    \begin{textblock*}{200mm}(13.5cm,.5cm)
+            \href{https://github.com/alexanderlerch/2023-slides-SoAI-Accelerator/blob/main/2023-SoAiAccelerator.pdf}{\includegraphics[height=2cm,keepaspectratio]{graph/qr}}\hspace*{2ex}
+    \end{textblock*}
     \vskip-10ex
     \begin{beamercolorbox}[wd=\paperwidth,ht=.7\paperheight,dp=0.6ex]{frametitle} %35ex
         \hspace*{1.8ex}\LARGE\inserttitle%
