--- a/include/contact.tex
+++ b/include/contact.tex
@@ -1,28 +1,38 @@
     \section[thanks]{thank you}
 
       \begin{frame}\frametitle{thank you!}\framesubtitle{~}
-           %\smallskip
-            \begin{block}{contact}
-                Alexander Lerch:
+            \addreference{\href{https://github.com/alexanderlerch}{github.com/alexanderlerch}}
+            \begin{block}{links}
+                alexander lerch: \href{https://www.linkedin.com/in/lerch}{www.linkedin.com/in/lerch}\\             
+                %\href{http://www.alexanderlerch.com}{www.alexanderlerch.com}
                 
-                \href{mailto:alexander.lerch@gatech.edu}{alexander.lerch@gatech.edu}
+								\bigskip
+								mail: \href{mailto:alexander.lerch@gatech.edu}{alexander.lerch@gatech.edu}
                 
+								\pause
                 \bigskip                
-                \href{https://www.AudioContentAnalysis.org}{www.AudioContentAnalysis.org}
+                book: \href{https://www.AudioContentAnalysis.org}{www.AudioContentAnalysis.org}
                 
-                \href{http://www.alexanderlerch.com}{www.alexanderlerch.com}
-
-                \bigskip
-                Music Informatics Group\\
-                \href{http://musicinformatics.gatech.edu}{musicinformatics.gatech.edu}
-
-                \vspace{-35mm}
+                \visible<2->{
+								\vspace{-25mm}
                 \begin{flushright}
                 \includegraphics[scale=.20]{cover_aca2_thumb}
                 \end{flushright}
-                \vspace{5mm}
+                \vspace{-15mm}}
+
+								\pause
+                \bigskip
+                zplane.development: 
+                \href{https://www.zplane.de}{www.zplane.de}
+
+                \pause
+								\bigskip
+                music informatics group:
+                \href{http://musicinformatics.gatech.edu}{musicinformatics.gatech.edu}
+								
+								\vspace{5mm}
+
             \end{block}
-            \addreference{\href{https://github.com/alexanderlerch}{github.com/alexanderlerch}}
             
 			%\vspace{-22mm}
 						\inserticon{mail}
