--- a/2023-SoAiAccelerator.tex
+++ b/2023-SoAiAccelerator.tex
@@ -33,7 +33,7 @@
         \begin{frame}{background}{professional}
                    
             \begin{itemize}
-                \item \textbf{Full-time}
+                \item \textbf{full-time}
                     \begin{itemize}
                         \item   \textit{Assistant/Associate Professor, Georgia Institute of Technology}  \hfill{2013--pres}
                         \smallskip
@@ -43,7 +43,7 @@
                         \item[] \phantom{dummy \hfill 2000}
                     \end{itemize}
             \bigskip
-                 \item \textbf{Temporary}
+                 \item \textbf{temporary}
                     \begin{itemize}
                         \item   \textit{Visiting Professor, Central Conservatory of Music, China}  \hfill{Summer 2023}
                         \smallskip
@@ -250,7 +250,7 @@
 							\begin{itemize}
 								\item get all the advise you can get but make up your own mind
 								\item you decide but always be open to question decisions/processes
-								\item have a clearly defined value system (but get out of your comfort zone!)
+								%\item have a clearly defined value system (but get out of your comfort zone!)
 								\item know when to listen to customers and when not
 							\end{itemize} 
 						\smallskip
@@ -270,7 +270,7 @@
 							\begin{itemize}
 								\item 	minimize 3rd party dependencies (API calls, platforms, libraries,...)
 								\item		don't over-engineer but spend a significant amount of time on automated tests
-								\item		define coding and commenting style and commit behavior
+								%\item		define coding and commenting style and commit behavior
 								\item		avoid concentrating critical knowledge in only one person without fallback strategy
 							\end{itemize}
 					\end{itemize}
